Fixed Safari dark mode text rendering issue

--- a/buddydude.dev.css
+++ b/buddydude.dev.css
@@ -137,7 +137,7 @@ small[category="hardware"] {
 }
 
 .post a {
-    color: initial;
+    color: inherit;
     text-decoration: none;
 }
 
